<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main_content"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ir.mohandesplus.examnight.activities.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="3dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <!-- Login progress -->
    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:tint="?colorPrimary"
        android:id="@+id/progress_bar"
        android:indeterminate="true"
        app:mpb_progressStyle="circular"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Large.NoPadding" />

    <!-- No Connection -->
    <include
        android:visibility="gone"
        layout="@layout/no_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/no_connection" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawablePadding="@dimen/grid_margin_side"
                    android:drawableEnd="@drawable/ic_action_email" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawablePadding="@dimen/grid_margin_side"
                    android:drawableEnd="@drawable/ic_action_key"/>

            </android.support.design.widget.TextInputLayout>

            <!--<RelativeLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_marginTop="16dp">-->
                <!--<Button-->
                    <!--android:layout_alignParentEnd="true"-->
                    <!--android:id="@+id/email_sign_up_button"-->
                    <!--style="@style/Widget.AppCompat.Button.Colored"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/action_sign_up"-->
                    <!--android:textStyle="bold" />-->
                <!--<Button-->
                    <!--android:layout_toStartOf="@id/email_sign_up_button"-->
                    <!--android:id="@+id/email_sign_in_button"-->
                    <!--style="@style/Widget.AppCompat.Button.Colored"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/action_sign_in_short"-->
                    <!--android:textStyle="bold" />-->
            <!--</RelativeLayout>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">
                <Button
                    android:layout_weight="0.49"
                    android:id="@+id/email_sign_in_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in_short"
                    android:textStyle="bold" />
                <View
                    android:layout_weight="0.02"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_weight="0.49"
                    android:id="@+id/email_sign_up_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_up"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
